# novel-pipeline-write-engine

./: .gitignore  CHANGELOG.md  README.md  config.example.json  install.bat  install.sh  novel.py  pyproject.toml  requirements-dashboard.txt  run_demo.bat  version.py
.story/: master_setting.json
database/: schema.sql
docs/: REFACTORING.md  ROADMAP.md  pipeline.md
novel_pipeline/: __init__.py  cli_entry.py  version.py
scripts/: agent_run_guard.py  bridge_evidence_guard.py  canon_evidence_guard.py  chapter_pipeline.py  chapter_rewriter.py  character_voice_guard.py  compliance_selfcheck_guard.py  concrete_anchor_guard.py  continuity_evidence_guard.py  cross_platform_check.py  dialogue_naturalness_guard.py  doctor.py  editor_revision_guard.py  fts_health.py  guard_orchestrator.py  guard_registry.py  health_check.py  hermes_menu.py  init_db.py  migrate_db.py  patch_planner.py  path_setup.py  perplexity_quality_guard.py  qgp_baseline.py  report_builder.py  revision_diff_report.py  revision_task_generator.py  risk_score.py  scene_causality_guard.py  scene_delta_guard.py  style_variation_guard.py  task_card_builder.py  utils.py  voice_profile_loader.py
tests/: conftest.py  test_agent_run_guard.py  test_anti_ai_registry_entry.py  test_canon_evidence_guard.py  test_chapter_rewriter.py  test_character_voice_guard.py  test_classical_register_guard.py  test_compliance_selfcheck_guard.py  test_concrete_anchor_guard.py  test_concrete_hook_guard.py  test_config_load.py  test_continuity_evidence_guard.py  test_dialogue_beat_guard.py  test_dialogue_naturalness_guard.py  (+30 more)
(+75 files in other folders)
